--- a/styleAB.css
+++ b/styleAB.css
@@ -8,23 +8,23 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,7 +32,7 @@ body {
     font-size: 20px;
 }
 
-.header div ul li {
+header nav ul li {
     list-style-type: none;
     display: inline-block;
     margin-left: 25px;
@@ -52,9 +52,11 @@ p {
     width: 100%;
     margin-bottom: 25px;
     background-image: url("./images/digital-marketing-meeting.jpg");
+    alt: "People gathered around a table having a meeting about digital marketing";
     background-size: cover;
     background-position: center;
 }
+
 
 .content {
     width: 75%;
@@ -62,7 +64,8 @@ p {
     margin-left: 20px;
 }
 
-.content-block {
+/*formatting for boxes in the content section*/
+.contentBlock {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -71,11 +74,13 @@ p {
     color: #ffffff;
 }
 
-.content-block img {
+/*formatting for images in the content section*/
+.contentBlock img {
     max-height: 200px;
 }
 
-.content-block h2 {
+/*formatting for headers in the content section*/
+.contentBlock h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -101,29 +106,29 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-block {
+.benefitBlock {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-block h3 {
+.benefitBlock h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-block img {
+.benefitBlock img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h4 {
     font-size: 20px;
 }
